[package]
name = "skyplane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.0"
bytemuck = "1.13"
bytemuck_derive = "1.4.1"
env_logger = "0.10"
glam = "0.21.3"
log = "0.4"
nanorand = { version = "0.7", default-features = false, features = ["wyrand"] }
noise = { version = "0.7", default-features = false }
pollster = "0.2"
wgpu = "0.15"
winit = "0.27.1"

# wasm32 dependencies
console_error_panic_hook = "0.1.7"
console_log = "0.2"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-test = "0.3"
web-sys = "0.3.61"
